0027563: Foundation Classes, opencascade::handle - make operator*() consistent with operator->()